--- a/app.yaml
+++ b/app.yaml
@@ -17,15 +17,15 @@ handlers:
   static_files: index-script.js
   upload: index-script\.js
 
-  - url: /scoreboard\.html
-    static_files: scoreboard.html
-    upload: scoreboard\.html
+- url: /scoreboard\.html
+  static_files: scoreboard.html
+  upload: scoreboard\.html
 
 - url: .*
   script: main.app
 
 libraries:
 - name: webapp2
-  version: "2.5.2"
+  version: latest
 - name: jinja2
   version: latest
