--- a/app.yaml
+++ b/app.yaml
@@ -29,6 +29,10 @@ handlers:
   static_files: scoreboard.html
   upload: scoreboard\.html
 
+- url: /scoreboard-style\.css
+  static_files: scoreboard-style.css
+  upload: scoreboard-style\.css
+
 - url: .*
   script: main.app
 
